New folder/open-interpreter/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plugin_detail_popup_npm_source.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: strip_osc8_for_snapshot(&popup)
---
  Plugins
  Figma · Can be installed · ChatGPT Marketplace
  Data shared with this app is subject to the app's terms of service and privacy policy. Learn
  more.
  Turn Figma files into implementation context.


› 1. Back to plugins  Return to the plugin list.
  2. Install plugin   Install this plugin now.
     Source           npm · @acme/figma-plugin@^1.2.0
     Auth             Auth on install
     Skills           design-review, extract-copy
     Hooks            PreToolUse (1), Stop (2)
     Apps             Figma, Slack
     MCP Servers      figma-mcp, docs-mcp

  esc close
